<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="Fragment.ProfileFragment"
    android:background="@color/backgroundGray"
    >

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:gravity="center"
                android:orientation="vertical">


                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:src="@drawable/user_profile"
                    app:civ_border_color="@color/colorAccent"
                    app:civ_border_width="1dp" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Nihal"
                    android:textColor="@color/colorButton"
                    android:textSize="18dp"
                    android:textStyle="bold" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/BasicInformation"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:textColor="#000"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:background="@drawable/basic_info_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/gender"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="female"
                            android:textColor="@color/colorButton" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/weight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="60"
                            android:textColor="@color/colorButton"
                            android:textSize="15dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="kg"
                            android:textColor="@color/colorButton"
                            android:textSize="12dp"

                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center"
                        android:orientation="vertical"

                        >

                        <TextView
                            android:id="@+id/height"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="165"
                            android:textColor="@color/colorButton"
                            android:textSize="15dp"


                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="cm"
                            android:textColor="@color/colorButton"
                            android:textSize="12dp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/age"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="25"
                            android:textColor="@color/colorButton"
                            android:textSize="15dp"

                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="year"
                            android:textColor="@color/colorButton"
                            android:textSize="12dp"

                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/blood_type"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="A-"
                            android:textColor="@color/colorButton"
                            android:textSize="15dp"

                            />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/square_info"
                        android:gravity="center">

                        <TextView
                            android:id="@+id/relation"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="single"
                            android:textColor="@color/colorButton" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NewPassword"
                    android:textColor="#000"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:background="@drawable/pass_profile"
                    android:layout_height="50dp"
                    >

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:padding="5dp"
                        android:src="@drawable/pass"
                        />


                    <TextView
                        android:id="@+id/autoPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="4655"
                        android:layout_marginLeft="120dp"
                        android:textColor="@color/colorButton"
                        android:textSize="20sp" />


                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Drugs"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:layout_marginBottom="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:background="#fff"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/RV"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.v7.widget.RecyclerView>


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Pressurechart"
                    android:textColor="#000"
                    android:layout_marginBottom="10dp"
                    android:textStyle="bold" />

                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart1"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Diabeteschart"
                    android:textStyle="bold" />


                <com.github.mikephil.charting.charts.LineChart
                    android:id="@+id/chart2"
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp" />


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</FrameLayout>